src/antlr4/miniJavaParser.java
// Generated from miniJava.g4 by ANTLR 4.4

    package antlr4;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class miniJavaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOOLEAN=1, INSTANCEOF=2, CLASS=3, ELSE=4, EXTENDS=5, IF=6, INT=7, NEW=8, 
		PUBLIC=9, RETURN=10, STATIC=11, THIS=12, VOID=13, WHILE=14, MAIN=15, STRING=16, 
		SOP=17, LENGTH=18, COEFCLASS=19, COEFSUBCLASS=20, COEFFECT=21, CF=22, 
		EXP=23, DECIMAL_LITERAL=24, BOOL_LITERAL=25, LPAREN=26, RPAREN=27, LBRACE=28, 
		RBRACE=29, LBRACK=30, RBRACK=31, SEMI=32, COMMA=33, DOT=34, ASSIGN=35, 
		GT=36, LT=37, AND=38, OR=39, BANG=40, ADD=41, SUB=42, MUL=43, DIV=44, 
		DQ=45, WS=46, COMMENT=47, LINE_COMMENT=48, IDENTIFIER=49;
	public static final String[] tokenNames = {
		"<INVALID>", "'boolean'", "'instanceof'", "'class'", "'else'", "'extends'", 
		"'if'", "'int'", "'new'", "'public'", "'return'", "'static'", "'this'", 
		"'void'", "'while'", "'main'", "'String'", "'System.out.println'", "'lenght'", 
		"'@CoeffectClass'", "'@CoeffectAuxClass'", "'@Coeffect'", "'coeffClass'", 
		"'exp'", "DECIMAL_LITERAL", "BOOL_LITERAL", "'('", "')'", "'{'", "'}'", 
		"'['", "']'", "';'", "','", "'.'", "'='", "'>'", "'<'", "'&&'", "'||'", 
		"'!'", "'+'", "'-'", "'*'", "'/'", "'\"'", "WS", "COMMENT", "LINE_COMMENT", 
		"IDENTIFIER"
	};
	public static final int
		RULE_program = 0, RULE_mainClass = 1, RULE_classDecl = 2, RULE_fieldDecl = 3, 
		RULE_coefClass = 4, RULE_varDecl = 5, RULE_varDeclp = 6, RULE_typeCoeff = 7, 
		RULE_coeffect = 8, RULE_methodDecl = 9, RULE_type = 10, RULE_statement = 11, 
		RULE_exp = 12;
	public static final String[] ruleNames = {
		"program", "mainClass", "classDecl", "fieldDecl", "coefClass", "varDecl", 
		"varDeclp", "typeCoeff", "coeffect", "methodDecl", "type", "statement", 
		"exp"
	};

	@Override
	public String getGrammarFileName() { return "miniJava.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public miniJavaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ClassDeclContext classDecl(int i) {
			return getRuleContext(ClassDeclContext.class,i);
		}
		public List<ClassDeclContext> classDecl() {
			return getRuleContexts(ClassDeclContext.class);
		}
		public MainClassContext mainClass() {
			return getRuleContext(MainClassContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniJavaVisitor ) return ((miniJavaVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26); mainClass();
			setState(30);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << COEFCLASS) | (1L << COEFSUBCLASS))) != 0)) {
				{
				{
				setState(27); classDecl();
				}
				}
				setState(32);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainClassContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode SOP() { return getToken(miniJavaParser.SOP, 0); }
		public List<TerminalNode> LBRACE() { return getTokens(miniJavaParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(miniJavaParser.LBRACE, i);
		}
		public TerminalNode STRING() { return getToken(miniJavaParser.STRING, 0); }
		public List<TerminalNode> RPAREN() { return getTokens(miniJavaParser.RPAREN); }
		public TerminalNode RBRACK() { return getToken(miniJavaParser.RBRACK, 0); }
		public TerminalNode LBRACK() { return getToken(miniJavaParser.LBRACK, 0); }
		public TerminalNode MAIN() { return getToken(miniJavaParser.MAIN, 0); }
		public TerminalNode RBRACE(int i) {
			return getToken(miniJavaParser.RBRACE, i);
		}
		public List<TerminalNode> RBRACE() { return getTokens(miniJavaParser.RBRACE); }
		public TerminalNode STATIC() { return getToken(miniJavaParser.STATIC, 0); }
		public TerminalNode RPAREN(int i) {
			return getToken(miniJavaParser.RPAREN, i);
		}
		public List<TerminalNode> LPAREN() { return getTokens(miniJavaParser.LPAREN); }
		public TerminalNode SEMI() { return getToken(miniJavaParser.SEMI, 0); }
		public TerminalNode VOID() { return getToken(miniJavaParser.VOID, 0); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(miniJavaParser.IDENTIFIER, i);
		}
		public TerminalNode PUBLIC() { return getToken(miniJavaParser.PUBLIC, 0); }
		public TerminalNode CLASS() { return getToken(miniJavaParser.CLASS, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(miniJavaParser.IDENTIFIER); }
		public TerminalNode LPAREN(int i) {
			return getToken(miniJavaParser.LPAREN, i);
		}
		public MainClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainClass; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniJavaVisitor ) return ((miniJavaVisitor<? extends T>)visitor).visitMainClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainClassContext mainClass() throws RecognitionException {
		MainClassContext _localctx = new MainClassContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainClass);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33); match(CLASS);
			setState(34); match(IDENTIFIER);
			setState(35); match(LBRACE);
			setState(36); match(PUBLIC);
			setState(37); match(STATIC);
			setState(38); match(VOID);
			setState(39); match(MAIN);
			setState(40); match(LPAREN);
			setState(41); match(STRING);
			setState(42); match(LBRACK);
			setState(43); match(RBRACK);
			setState(44); match(IDENTIFIER);
			setState(45); match(RPAREN);
			setState(46); match(LBRACE);
			setState(47); match(SOP);
			setState(48); match(LPAREN);
			setState(49); exp(0);
			setState(50); match(RPAREN);
			setState(51); match(SEMI);
			setState(52); match(RBRACE);
			setState(53); match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclContext extends ParserRuleContext {
		public CoefClassContext coefClass() {
			return getRuleContext(CoefClassContext.class,0);
		}
		public List<MethodDeclContext> methodDecl() {
			return getRuleContexts(MethodDeclContext.class);
		}
		public TerminalNode RBRACE() { return getToken(miniJavaParser.RBRACE, 0); }
		public TerminalNode LBRACE() { return getToken(miniJavaParser.LBRACE, 0); }
		public List<FieldDeclContext> fieldDecl() {
			return getRuleContexts(FieldDeclContext.class);
		}
		public FieldDeclContext fieldDecl(int i) {
			return getRuleContext(FieldDeclContext.class,i);
		}
		public TerminalNode IDENTIFIER(int i) {
			return getToken(miniJavaParser.IDENTIFIER, i);
		}
		public TerminalNode CLASS() { return getToken(miniJavaParser.CLASS, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(miniJavaParser.IDENTIFIER); }
		public TerminalNode EXTENDS() { return getToken(miniJavaParser.EXTENDS, 0); }
		public MethodDeclContext methodDecl(int i) {
			return getRuleContext(MethodDeclContext.class,i);
		}
		public ClassDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniJavaVisitor ) return ((miniJavaVisitor<? extends T>)visitor).visitClassDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclContext classDecl() throws RecognitionException {
		ClassDeclContext _localctx = new ClassDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classDecl);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_la = _input.LA(1);
			if (_la==COEFCLASS || _la==COEFSUBCLASS) {
				{
				setState(55); coefClass();
				}
			}

			setState(58); match(CLASS);
			setState(59); match(IDENTIFIER);
			setState(62);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(60); match(EXTENDS);
				setState(61); match(IDENTIFIER);
				}
			}

			setState(64); match(LBRACE);
			setState(68);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(65); fieldDecl();
					}
					} 
				}
				setState(70);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << INT) | (1L << STATIC) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(71); methodDecl();
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(77); match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldDeclContext extends ParserRuleContext {
		public TerminalNode SEMI() { return getToken(miniJavaParser.SEMI, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(miniJavaParser.IDENTIFIER, 0); }
		public FieldDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniJavaVisitor ) return ((miniJavaVisitor<? extends T>)visitor).visitFieldDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldDeclContext fieldDecl() throws RecognitionException {
		FieldDeclContext _localctx = new FieldDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fieldDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79); type();
			setState(80); match(IDENTIFIER);
			setState(81); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CoefClassContext extends ParserRuleContext {
		public TerminalNode DQ(int i) {
			return getToken(miniJavaParser.DQ, i);
		}
		public List<TerminalNode> DQ() { return getTokens(miniJavaParser.DQ); }
		public TerminalNode COEFCLASS() { return getToken(miniJavaParser.COEFCLASS, 0); }
		public TerminalNode LPAREN() { return getToken(miniJavaParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(miniJavaParser.RPAREN, 0); }
		public TerminalNode COEFSUBCLASS() { return getToken(miniJavaParser.COEFSUBCLASS, 0); }
		public TerminalNode IDENTIFIER() { return getToken(miniJavaParser.IDENTIFIER, 0); }
		public CoefClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_coefClass; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniJavaVisitor ) return ((miniJavaVisitor<? extends T>)visitor).visitCoefClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CoefClassContext coefClass() throws RecognitionException {
		CoefClassContext _localctx = new CoefClassContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_coefClass);
		try {
			setState(90);
			switch (_input.LA(1)) {
			case COEFCLASS:
				enterOuterAlt(_localctx, 1);
				{
				setState(83); match(COEFCLASS);
				}
				break;
			case COEFSUBCLASS:
				enterOuterAlt(_localctx, 2);
				{
				setState(84); match(COEFSUBCLASS);
				setState(85); match(LPAREN);
				setState(86); match(DQ);
				setState(87); match(IDENTIFIER);
				setState(88); match(DQ);
				setState(89); match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public TypeCoeffContext typeCoeff() {
			return getRuleContext(TypeCoeffContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(miniJavaParser.SEMI, 0); }
		public TerminalNode IDENTIFIER() { return getToken(miniJavaParser.IDENTIFIER, 0); }
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniJavaVisitor ) return ((miniJavaVisitor<? extends T>)visitor).visitVarDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); typeCoeff();
			setState(93); match(IDENTIFIER);
			setState(94); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclpContext extends ParserRuleContext {
		public TypeCoeffContext typeCoeff() {
			return getRuleContext(TypeCoeffContext.class,0);
		}
		public TerminalNode THIS() { return getToken(miniJavaParser.THIS, 0); }
		public TerminalNode IDENTIFIER() { return getToken(miniJavaParser.IDENTIFIER, 0); }
		public VarDeclpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniJavaVisitor ) return ((miniJavaVisitor<? extends T>)visitor).visitVarDeclp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclpContext varDeclp() throws RecognitionException {
		VarDeclpContext _localctx = new VarDeclpContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varDeclp);
		try {
			setState(102);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96); typeCoeff();
				setState(97); match(THIS);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(99); typeCoeff();
				setState(100); match(IDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeCoeffContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public CoeffectContext coeffect() {
			return getRuleContext(CoeffectContext.class,0);
		}
		public TypeCoeffContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeCoeff; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniJavaVisitor ) return ((miniJavaVisitor<? extends T>)visitor).visitTypeCoeff(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeCoeffContext typeCoeff() throws RecognitionException {
		TypeCoeffContext _localctx = new TypeCoeffContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_typeCoeff);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_la = _input.LA(1);
			if (_la==COEFFECT) {
				{
				setState(104); coeffect();
				}
			}

			setState(107); type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CoeffectContext extends ParserRuleContext {
		public TerminalNode DQ(int i) {
			return getToken(miniJavaParser.DQ, i);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public List<TerminalNode> ASSIGN() { return getTokens(miniJavaParser.ASSIGN); }
		public TerminalNode ASSIGN(int i) {
			return getToken(miniJavaParser.ASSIGN, i);
		}
		public List<TerminalNode> DQ() { return getTokens(miniJavaParser.DQ); }
		public TerminalNode LPAREN() { return getToken(miniJavaParser.LPAREN, 0); }
		public TerminalNode COMMA() { return getToken(miniJavaParser.COMMA, 0); }
		public TerminalNode EXP() { return getToken(miniJavaParser.EXP, 0); }
		public TerminalNode RPAREN() { return getToken(miniJavaParser.RPAREN, 0); }
		public TerminalNode CF() { return getToken(miniJavaParser.CF, 0); }
		public TerminalNode IDENTIFIER() { return getToken(miniJavaParser.IDENTIFIER, 0); }
		public TerminalNode COEFFECT() { return getToken(miniJavaParser.COEFFECT, 0); }
		public CoeffectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_coeffect; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniJavaVisitor ) return ((miniJavaVisitor<? extends T>)visitor).visitCoeffect(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CoeffectContext coeffect() throws RecognitionException {
		CoeffectContext _localctx = new CoeffectContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_coeffect);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109); match(COEFFECT);
			setState(110); match(LPAREN);
			setState(111); match(CF);
			setState(112); match(ASSIGN);
			setState(113); match(DQ);
			setState(114); match(IDENTIFIER);
			setState(115); match(DQ);
			setState(116); match(COMMA);
			setState(117); match(EXP);
			setState(118); match(ASSIGN);
			setState(119); match(DQ);
			setState(120); exp(0);
			setState(121); match(DQ);
			setState(122); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public VarDeclpContext varDeclp(int i) {
			return getRuleContext(VarDeclpContext.class,i);
		}
		public TerminalNode LBRACE() { return getToken(miniJavaParser.LBRACE, 0); }
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(miniJavaParser.RPAREN, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode THIS() { return getToken(miniJavaParser.THIS, 0); }
		public List<VarDeclpContext> varDeclp() {
			return getRuleContexts(VarDeclpContext.class);
		}
		public TerminalNode COMMA(int i) {
			return getToken(miniJavaParser.COMMA, i);
		}
		public TerminalNode RETURN() { return getToken(miniJavaParser.RETURN, 0); }
		public TerminalNode RBRACE() { return getToken(miniJavaParser.RBRACE, 0); }
		public TypeCoeffContext typeCoeff() {
			return getRuleContext(TypeCoeffContext.class,0);
		}
		public TerminalNode STATIC() { return getToken(miniJavaParser.STATIC, 0); }
		public TerminalNode LPAREN() { return getToken(miniJavaParser.LPAREN, 0); }
		public TerminalNode SEMI() { return getToken(miniJavaParser.SEMI, 0); }
		public List<TerminalNode> COMMA() { return getTokens(miniJavaParser.COMMA); }
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public TerminalNode IDENTIFIER(int i) {
			return getToken(miniJavaParser.IDENTIFIER, i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(miniJavaParser.IDENTIFIER); }
		public MethodDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniJavaVisitor ) return ((miniJavaVisitor<? extends T>)visitor).visitMethodDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodDeclContext methodDecl() throws RecognitionException {
		MethodDeclContext _localctx = new MethodDeclContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_methodDecl);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_la = _input.LA(1);
			if (_la==STATIC) {
				{
				setState(124); match(STATIC);
				}
			}

			setState(127); type();
			setState(128); match(IDENTIFIER);
			setState(129); match(LPAREN);
			setState(139);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << INT) | (1L << COEFFECT) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(130); typeCoeff();
				setState(131);
				_la = _input.LA(1);
				if ( !(_la==THIS || _la==IDENTIFIER) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(132); match(COMMA);
					setState(133); varDeclp();
					}
					}
					setState(138);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(141); match(RPAREN);
			setState(142); match(LBRACE);
			setState(146);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(143); varDecl();
					}
					} 
				}
				setState(148);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << SOP) | (1L << LBRACE) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(149); statement();
				}
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(155); match(RETURN);
			setState(156); exp(0);
			setState(157); match(SEMI);
			setState(158); match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode RBRACK() { return getToken(miniJavaParser.RBRACK, 0); }
		public TerminalNode BOOLEAN() { return getToken(miniJavaParser.BOOLEAN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(miniJavaParser.IDENTIFIER, 0); }
		public TerminalNode INT() { return getToken(miniJavaParser.INT, 0); }
		public TerminalNode LBRACK() { return getToken(miniJavaParser.LBRACK, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof miniJavaVisitor ) return ((miniJavaVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_type);
		try {
			setState(172);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(160); match(IDENTIFIER);
				setState(161); match(LBRACK);
				setState(162); match(RBRACK);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(163); match(BOOLEAN);
				setState(164); match(LBRACK);
				setState(165); match(RBRACK);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(166); match(INT);
				setState(167); match(LBRACK);
				setState(168); match(RBRACK);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(169); match(BOOLEAN);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(170); match(INT);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(171); match(IDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
